--- a/index.html
+++ b/index.html
@@ -42,14 +42,14 @@
         <ul class="contacts">
           <li class="contacts-item">
             <a class="contacts-link" href="mailto:info@devstudio.com"
-              ><svg class="contacts-link-icon" width="16px" height="12px">
+              ><svg class="contacts-link-icon" width="16" height="12">
                 <use href="./images/header-icons.svg#icon-envelope"></use></svg
               >info@devstudio.com</a
             >
           </li>
           <li class="contacts-item">
             <a class="contacts-link" href="tel:+380961111111"
-              ><svg class="contacts-link-icon" width="10px" height="16px">
+              ><svg class="contacts-link-icon" width="10" height="16">
                 <use href="./images/header-icons.svg#icon-smartphone"></use></svg
               >+38 096 111 11 11</a
             >
@@ -69,7 +69,7 @@
           <ul class="about-list">
             <li class="about-item">
               <div class="about-item-link">
-                <svg class="about-item-icon" width="70px" height="70px">
+                <svg class="about-item-icon" width="70" height="70">
                   <use href="./images/Peculiarities.svg#icon-antenna"></use>
                 </svg>
               </div>
@@ -80,7 +80,7 @@
             </li>
             <li class="about-item">
               <div class="about-item-link">
-                <svg class="about-item-icon" width="70px" height="70px">
+                <svg class="about-item-icon" width="70" height="70">
                   <use href="./images/Peculiarities.svg#icon-clock"></use>
                 </svg>
               </div>
@@ -91,7 +91,7 @@
             </li>
             <li class="about-item">
               <div class="about-item-link">
-                <svg class="about-item-icon" width="70px" height="70px">
+                <svg class="about-item-icon" width="70" height="70">
                   <use href="./images/Peculiarities.svg#icon-diagram"></use>
                 </svg>
               </div>
@@ -102,7 +102,7 @@
             </li>
             <li class="about-item">
               <div class="about-item-link">
-                <svg class="about-item-icon" width="70px" height="70px">
+                <svg class="about-item-icon" width="70" height="70">
                   <use href="./images/Peculiarities.svg#icon-astronaut"></use>
                 </svg>
               </div>
@@ -149,28 +149,28 @@
                     <ul class="team-social-list">
                       <li class="team-social-item">
                         <a href="" class="team-social-link">
-                          <svg class="team-social-icon" width="20px" height="20px">
+                          <svg class="team-social-icon" width="20" height="20">
                             <use href="./images/icons.svg#icon-instagram"></use>
                           </svg>
                         </a>
                       </li>
                       <li class="team-social-item">
                         <a href="" class="team-social-link">
-                          <svg class="team-social-icon" width="20px" height="20px">
+                          <svg class="team-social-icon" width="20" height="20">
                             <use href="./images/icons.svg#icon-twitter"></use>
                           </svg>
                         </a>
                       </li>
                       <li class="team-social-item">
                         <a href="" class="team-social-link">
-                          <svg class="team-social-icon" width="20px" height="20px">
+                          <svg class="team-social-icon" width="20" height="20">
                             <use href="./images/icons.svg#icon-facebook"></use>
                           </svg>
                         </a>
                       </li>
                       <li class="team-social-item">
                         <a href="" class="team-social-link">
-                          <svg class="team-social-icon" width="20px" height="20px">
+                          <svg class="team-social-icon" width="20" height="20">
                             <use href="./images/icons.svg#icon-linkedin"></use>
                           </svg>
                         </a>
@@ -190,28 +190,28 @@
                     <ul class="team-social-list">
                       <li class="team-social-item">
                         <a href="" class="team-social-link">
-                          <svg class="team-social-icon" width="20px" height="20px">
+                          <svg class="team-social-icon" width="20" height="20">
                             <use href="./images/icons.svg#icon-instagram"></use>
                           </svg>
                         </a>
                       </li>
                       <li class="team-social-item">
                         <a href="" class="team-social-link">
-                          <svg class="team-social-icon" width="20px" height="20px">
+                          <svg class="team-social-icon" width="20" height="20">
                             <use href="./images/icons.svg#icon-twitter"></use>
                           </svg>
                         </a>
                       </li>
                       <li class="team-social-item">
                         <a href="" class="team-social-link">
-                          <svg class="team-social-icon" width="20px" height="20px">
+                          <svg class="team-social-icon" width="20" height="20">
                             <use href="./images/icons.svg#icon-facebook"></use>
                           </svg>
                         </a>
                       </li>
                       <li class="team-social-item">
                         <a href="" class="team-social-link">
-                          <svg class="team-social-icon" width="20px" height="20px">
+                          <svg class="team-social-icon" width="20" height="20">
                             <use href="./images/icons.svg#icon-linkedin"></use>
                           </svg>
                         </a>
@@ -231,28 +231,28 @@
                     <ul class="team-social-list">
                       <li class="team-social-item">
                         <a href="" class="team-social-link">
-                          <svg class="team-social-icon" width="20px" height="20px">
+                          <svg class="team-social-icon" width="20" height="20">
                             <use href="./images/icons.svg#icon-instagram"></use>
                           </svg>
                         </a>
                       </li>
                       <li class="team-social-item">
                         <a href="" class="team-social-link">
-                          <svg class="team-social-icon" width="20px" height="20px">
+                          <svg class="team-social-icon" width="20" height="20">
                             <use href="./images/icons.svg#icon-twitter"></use>
                           </svg>
                         </a>
                       </li>
                       <li class="team-social-item">
                         <a href="" class="team-social-link">
-                          <svg class="team-social-icon" width="20px" height="20px">
+                          <svg class="team-social-icon" width="20" height="20">
                             <use href="./images/icons.svg#icon-facebook"></use>
                           </svg>
                         </a>
                       </li>
                       <li class="team-social-item">
                         <a href="" class="team-social-link">
-                          <svg class="team-social-icon" width="20px" height="20px">
+                          <svg class="team-social-icon" width="20" height="20">
                             <use href="./images/icons.svg#icon-linkedin"></use>
                           </svg>
                         </a>
@@ -272,28 +272,28 @@
                     <ul class="team-social-list">
                       <li class="team-social-item">
                         <a href="" class="team-social-link">
-                          <svg class="team-social-icon" width="20px" height="20px">
+                          <svg class="team-social-icon" width="20" height="20">
                             <use href="./images/icons.svg#icon-instagram"></use>
                           </svg>
                         </a>
                       </li>
                       <li class="team-social-item">
                         <a href="" class="team-social-link">
-                          <svg class="team-social-icon" width="20px" height="20px">
+                          <svg class="team-social-icon" width="20" height="20">
                             <use href="./images/icons.svg#icon-twitter"></use>
                           </svg>
                         </a>
                       </li>
                       <li class="team-social-item">
                         <a href="" class="team-social-link">
-                          <svg class="team-social-icon" width="20px" height="20px">
+                          <svg class="team-social-icon" width="20" height="20">
                             <use href="./images/icons.svg#icon-facebook"></use>
                           </svg>
                         </a>
                       </li>
                       <li class="team-social-item">
                         <a href="" class="team-social-link">
-                          <svg class="team-social-icon" width="20px" height="20px">
+                          <svg class="team-social-icon" width="20" height="20">
                             <use href="./images/icons.svg#icon-linkedin"></use>
                           </svg>
                         </a>
@@ -306,105 +306,107 @@
           </ul>
         </div>
       </section>
-      <section class="section clients">
-        <h2 class="clients-title">Постоянные клиенты</h2>
-        <ul class="clients-list">
-          <li class="clients-item">
-            <a href="" class="clients-link">
-              <svg class="clients-icon" width="40px" height="46.7px">
-                <use href="./images/clients.svg#icon-yoco"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="clients-item">
-            <a href="" class="clients-link">
-              <svg class="clients-icon" width="40px" height="52px">
-                <use href="./images/clients.svg#icon-company1"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="clients-item">
-            <a href="" class="clients-link">
-              <svg class="clients-icon" width="43.46px" height="41.18px">
-                <use href="./images/clients.svg#icon-company2"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="clients-item">
-            <a href="" class="clients-link">
-              <svg class="clients-icon" width="84.44px" height="40.62px">
-                <use href="./images/clients.svg#icon-foster"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="clients-item">
-            <a href="" class="clients-link">
-              <svg class="clients-icon" width="62.54px" height="45.43px">
-                <use href="./images/clients.svg#icon-brand"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="clients-item">
-            <a href="" class="clients-link">
-              <svg class="clients-icon" width="93.79px" height="43.93px">
-                <use href="./images/clients.svg#icon-company3"></use>
-              </svg>
-            </a>
-          </li>
-        </ul>
+      <section class="section">
+        <div class="container">
+          <h2 class="clients-title">Постоянные клиенты</h2>
+          <ul class="clients-list">
+            <li class="clients-item">
+              <a href="" class="clients-link">
+                <svg class="clients-icon" width="106" height="60">
+                  <use href="./images/clients.svg#icon-yoco"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="clients-item">
+              <a href="" class="clients-link">
+                <svg class="clients-icon" width="106" height="60">
+                  <use href="./images/clients.svg#icon-company1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="clients-item">
+              <a href="" class="clients-link">
+                <svg class="clients-icon" width="106" height="60">
+                  <use href="./images/clients.svg#icon-company2"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="clients-item">
+              <a href="" class="clients-link">
+                <svg class="clients-icon" width="106" height="60">
+                  <use href="./images/clients.svg#icon-foster"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="clients-item">
+              <a href="" class="clients-link">
+                <svg class="clients-icon" width="106" height="60">
+                  <use href="./images/clients.svg#icon-brand"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="clients-item">
+              <a href="" class="clients-link">
+                <svg class="clients-icon" width="106" height="60">
+                  <use href="./images/clients.svg#icon-company3"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <footer>
-      <div class="container">
+      <div class="container footer-container">
         <div class="container-footer">
           <a class="header-logo" href="./index.html"
             >Web<span class="logo-color-footer">Studio</span></a
           >
-          <h3 class="footer-social-text">Присоединяйтесь</h3>
-        </div>
-        <address class="footer-address">
-          <ul class="footer-list">
-            <li class="footer-item"><p>г. Киев, пр-т Леси Украинки, 26</p></li>
-            <li>
-              <a class="link-footer" href="mailto:info@devstudio.com">info@devstudio.com</a>
-            </li>
-            <li>
-              <a class="link-footer" href="tel:+380961111111">+38 096 111 11 11</a>
-            </li>
-          </ul>
-          <div class="footer-social">
-            <ul class="footer-social-list">
-              <li class="footer-social-item">
-                <a href="" class="footer-social-link">
-                  <svg class="footer-social-icon" width="20px" height="20px">
-                    <use href="./images/icons.svg#icon-instagram"></use>
-                  </svg>
-                </a>
+          <address class="footer-address">
+            <ul class="footer-list">
+              <li class="footer-item"><p>г. Киев, пр-т Леси Украинки, 26</p></li>
+              <li>
+                <a class="link-footer" href="mailto:info@devstudio.com">info@devstudio.com</a>
               </li>
-              <li class="footer-social-item">
-                <a href="" class="footer-social-link">
-                  <svg class="footer-social-icon" width="20px" height="20px">
-                    <use href="./images/icons.svg#icon-twitter"></use>
-                  </svg>
-                </a>
-              </li>
-              <li class="footer-social-item">
-                <a href="" class="footer-social-link">
-                  <svg class="footer-social-icon" width="20px" height="20px">
-                    <use href="./images/icons.svg#icon-facebook"></use>
-                  </svg>
-                </a>
-              </li>
-              <li class="footer-social-item">
-                <a href="" class="footer-social-link">
-                  <svg class="footer-social-icon" width="20px" height="20px">
-                    <use href="./images/icons.svg#icon-linkedin"></use>
-                  </svg>
-                </a>
+              <li>
+                <a class="link-footer" href="tel:+380961111111">+38 096 111 11 11</a>
               </li>
             </ul>
-          </div>
-        </address>
+          </address>
+        </div>
+        <div class="footer-social">
+          <h3 class="footer-social-text">Присоединяйтесь</h3>
+          <ul class="footer-social-list">
+            <li class="footer-social-item">
+              <a href="" class="footer-social-link">
+                <svg class="footer-social-icon" width="20" height="20">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-social-item">
+              <a href="" class="footer-social-link">
+                <svg class="footer-social-icon" width="20" height="20">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-social-item">
+              <a href="" class="footer-social-link">
+                <svg class="footer-social-icon" width="20" height="20">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-social-item">
+              <a href="" class="footer-social-link">
+                <svg class="footer-social-icon" width="20" height="20">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
