--- a/portfolio.html
+++ b/portfolio.html
@@ -30,9 +30,7 @@
         >
         <nav class="header-nav">
           <ul class="header-list">
-            <li class="header-item">
-              <a class="header-link" href="./index.html">Студия</a>
-            </li>
+            <li class="header-item"><a class="header-link" href="./index.html">Студия</a></li>
             <li class="header-item">
               <a class="header-link" href="./portfolio.html">Портфолио</a>
             </li>
@@ -42,14 +40,21 @@
           </ul>
         </nav>
         <ul class="contacts">
-          <ul class="contacts">
-            <li class="contacts-item"><a class="contacts-link" href="mailto:info@devstudio.com"><svg class="contacts-link-icon" width="16px" height="12px">
-              <use href="./images/header-icons.svg#icon-envelope"></use>
-            </svg>info@devstudio.com</a></li>
-            <li class="contacts-item"><a class="contacts-link" href="tel:+380961111111"><svg class="contacts-link-icon" width="10px" height="16px">
-              <use href="./images/header-icons.svg#icon-smartphone"></use>
-            </svg>+38 096 111 11 11</a></li>
-          </ul>
+          <li class="contacts-item">
+            <a class="contacts-link" href="mailto:info@devstudio.com"
+              ><svg class="contacts-link-icon" width="16" height="12">
+                <use href="./images/header-icons.svg#icon-envelope"></use></svg
+              >info@devstudio.com</a
+            >
+          </li>
+          <li class="contacts-item">
+            <a class="contacts-link" href="tel:+380961111111"
+              ><svg class="contacts-link-icon" width="10" height="16">
+                <use href="./images/header-icons.svg#icon-smartphone"></use></svg
+              >+38 096 111 11 11</a
+            >
+          </li>
+        </ul>
       </div>
     </header>
     <main>
@@ -57,171 +62,172 @@
         <div class="container">
           <h1 class="button-title">Наши преимущества</h1>
           <ul class="button-wrap">
-            <li class="button-bt">Все</li>
-            <li class="button-bt">Веб-сайты</li>
-            <li class="button-bt">Приложения</li>
-            <li class="button-bt">Дизайн</li>
-            <li class="button-bt">Маркетинг</li>
+            <li class="button-item">
+              <button type="button" class="button-bt">Все</button>
+            </li>
+            <li class="button-item">
+              <button type="button" class="button-bt">Веб-сайты</button>
+            </li>
+            <li class="button-item">
+              <button type="button" class="button-bt">Приложения</button>
+            </li>
+            <li class="button-item">
+              <button type="button" class="button-bt">Дизайн</button>
+            </li>
+            <li class="button-item">
+              <button type="button" class="button-bt">Маркетинг</button>
+            </li>
           </ul>
           <ul class="flex-list">
             <li class="flex-list-card">
-              <img
-                src="./images/tehnokryak.jpg"
-                alt="ноутбук"
-                width="370"
-                height="294"
-              />
-              <h2 class="flex-list-name">Технокряк</h2>
-              <p class="flex-list-profession">Веб-сайт</p>
+              <a class="flex-list-link" href="">
+                <img src="./images/tehnokryak.jpg" alt="ноутбук" width="370" height="294" />
+                <div class="flex-list-text">
+                  <h2 class="flex-list-name">Технокряк</h2>
+                  <p class="flex-list-profession">Веб-сайт</p>
+                </div>
+              </a>
             </li>
             <li class="flex-list-card">
-              <img
-                src="./images/poster.jpg"
-                alt="бейсболисты кидают мячь"
-                width="370"
-                height="294"
-              />
-              <h2 class="flex-list-name">
-                Постер <span lang="en">New Orlean vs Golden Star</span>
-              </h2>
-              <p class="flex-list-profession">Дизайн</p>
+              <a class="flex-list-link" href="">
+                <img
+                  src="./images/poster.jpg"
+                  alt="бейсболисты кидают мячь"
+                  width="370"
+                  height="294"
+                />
+                <div class="flex-list-text">
+                  <h2 class="flex-list-name">
+                    Постер <span lang="en">New Orlean vs Golden Star</span>
+                  </h2>
+                  <p class="flex-list-profession">Дизайн</p>
+                </div>
+              </a>
             </li>
             <li class="flex-list-card">
-              <img
-                src="./images/restoran.jpg"
-                alt="логотип ресторана"
-                width="370"
-                height="294"
-              />
-              <h2 class="flex-list-name">
-                Ресторан <span lang="en">Seafood</span>
-              </h2>
-              <p class="flex-list-profession">Приложение</p>
+              <a class="flex-list-link" href="">
+                <img src="./images/restoran.jpg" alt="логотип ресторана" width="370" height="294" />
+                <div class="flex-list-text">
+                  <h2 class="flex-list-name">Ресторан <span lang="en">Seafood</span></h2>
+                  <p class="flex-list-profession">Приложение</p>
+                </div>
+              </a>
             </li>
             <li class="flex-list-card">
-              <img
-                src="./images/naushniki.jpg"
-                alt="Наушники"
-                width="370"
-                height="294"
-              />
-              <h2 class="flex-list-name">
-                Проект <span lang="en">Prime</span>
-              </h2>
-              <p class="flex-list-profession">Маркетинг</p>
+              <a class="flex-list-link" href="">
+                <img src="./images/naushniki.jpg" alt="Наушники" width="370" height="294" />
+                <div class="flex-list-text">
+                  <h2 class="flex-list-name">Проект <span lang="en">Prime</span></h2>
+                  <p class="flex-list-profession">Маркетинг</p>
+                </div>
+              </a>
             </li>
             <li class="flex-list-card">
-              <img
-                src="./images/korobka.jpg"
-                alt="коробки"
-                width="370"
-                height="294"
-              />
-              <h2 class="flex-list-name">
-                Проект <span lang="en">Boxes</span>
-              </h2>
-              <p class="flex-list-profession">Приложение</p>
+              <a class="flex-list-link" href="">
+                <img src="./images/korobka.jpg" alt="коробки" width="370" height="294" />
+                <div class="flex-list-text">
+                  <h2 class="flex-list-name">Проект <span lang="en">Boxes</span></h2>
+                  <p class="flex-list-profession">Приложение</p>
+                </div>
+              </a>
             </li>
             <li class="flex-list-card">
-              <img
-                src="./images/monitor.jpg"
-                alt="экран монитора"
-                width="370"
-                height="294"
-              />
-              <h2 lang="en" class="flex-list-name">
-                Inspiration has no Borders
-              </h2>
-              <p class="flex-list-profession">Веб-сайт</p>
+              <a class="flex-list-link" href="">
+                <img src="./images/monitor.jpg" alt="экран монитора" width="370" height="294" />
+                <div class="flex-list-text">
+                  <h2 lang="en" class="flex-list-name">Inspiration has no Borders</h2>
+                  <p class="flex-list-profession">Веб-сайт</p>
+                </div>
+              </a>
             </li>
             <li class="flex-list-card">
-              <img
-                src="./images/gurnal.jpg"
-                alt="страницы журнала"
-                width="370"
-                height="294"
-              />
-              <h2 class="flex-list-name">
-                Издание <span lang="en">Limited Edition</span>
-              </h2>
-              <p class="flex-list-profession">Дизайн</p>
+              <a class="flex-list-link" href="">
+                <img src="./images/gurnal.jpg" alt="страницы журнала" width="370" height="294" />
+                <div class="flex-list-text">
+                  <h2 class="flex-list-name">Издание <span lang="en">Limited Edition</span></h2>
+                  <p class="flex-list-profession">Дизайн</p>
+                </div>
+              </a>
             </li>
             <li class="flex-list-card">
-              <img
-                src="./images/lab.jpg"
-                alt="лейбл"
-                width="370"
-                height="294"
-              />
-              <h2 class="flex-list-name">Проект <span lang="en">LAB</span></h2>
-              <p class="flex-list-profession">Маркетинг</p>
+              <a class="flex-list-link" href="">
+                <img src="./images/lab.jpg" alt="лейбл" width="370" height="294" />
+                <div class="flex-list-text">
+                  <h2 class="flex-list-name">Проект <span lang="en">LAB</span></h2>
+                  <p class="flex-list-profession">Маркетинг</p>
+                </div>
+              </a>
             </li>
             <li class="flex-list-card">
-              <img
-                src="./images/bissnes-nout.jpg"
-                alt="экран ноутбука"
-                width="370"
-                height="294"
-              />
-              <h2 lang="en" class="flex-list-name">Growing Business</h2>
-              <p class="flex-list-profession">Приложение</p>
+              <a class="flex-list-link" href="">
+                <img
+                  src="./images/bissnes-nout.jpg"
+                  alt="экран ноутбука"
+                  width="370"
+                  height="294"
+                />
+                <div class="flex-list-text">
+                  <h2 lang="en" class="flex-list-name">Growing Business</h2>
+                  <p class="flex-list-profession">Приложение</p>
+                </div>
+              </a>
             </li>
           </ul>
         </div>
       </section>
     </main>
     <footer>
-      <div class="container">
+      <div class="container footer-container">
         <div class="container-footer">
-          <a class="header-logo" href="./index.html">Web<span class="logo-color-footer">Studio</span></a>
-          <h3 class="footer-social-text">Присоединяйтесь</h3>
+          <a class="header-logo" href="./index.html"
+            >Web<span class="logo-color-footer">Studio</span></a
+          >
+          <address class="footer-address">
+            <ul class="footer-list">
+              <li class="footer-item"><p>г. Киев, пр-т Леси Украинки, 26</p></li>
+              <li>
+                <a class="link-footer" href="mailto:info@devstudio.com">info@devstudio.com</a>
+              </li>
+              <li>
+                <a class="link-footer" href="tel:+380961111111">+38 096 111 11 11</a>
+              </li>
+            </ul>
+          </address>
         </div>
-      <address class="footer-address">
-        <ul class="footer-list">
-          <li class="footer-item"><p>г. Киев, пр-т Леси Украинки, 26</p></li>
-          <li>
-            <a class="link-footer" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li>
-            <a class="link-footer" href="tel:+380961111111">+38 096 111 11 11</a>
-          </li>
-        </ul>
-      <div class="footer-social">
+        <div class="footer-social">
+          <h3 class="footer-social-text">Присоединяйтесь</h3>
           <ul class="footer-social-list">
             <li class="footer-social-item">
               <a href="" class="footer-social-link">
-                <svg class="footer-social-icon" width="20px" height="20px">
+                <svg class="footer-social-icon" width="20" height="20">
                   <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
-            </a>
+              </a>
             </li>
             <li class="footer-social-item">
               <a href="" class="footer-social-link">
-              <svg class="footer-social-icon" width="20px" height="20px">
-                <use href="./images/icons.svg#icon-twitter"></use>
-              </svg>
-            </a>
+                <svg class="footer-social-icon" width="20" height="20">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
             </li>
             <li class="footer-social-item">
               <a href="" class="footer-social-link">
-                <svg class="footer-social-icon" width="20px" height="20px">
+                <svg class="footer-social-icon" width="20" height="20">
                   <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
-            </a>
+              </a>
             </li>
             <li class="footer-social-item">
               <a href="" class="footer-social-link">
-                <svg class="footer-social-icon" width="20px" height="20px">
+                <svg class="footer-social-icon" width="20" height="20">
                   <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
-            </a>
+              </a>
             </li>
           </ul>
-    </div>
-    </div>
-    </address>
+        </div>
+      </div>
     </footer>
   </body>
 </html>
